# unifi-api

./: .env_sample  Cargo.toml
src/: curl.rs  main.rs  response.rs
