[package]
name = "unifi_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version="0.12.9", features = ["json"] }
serde = { version="1.0.215", features =["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
